# yew-actix-template

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  set_version.sh  start_dev.sh
.github/workflows/: backend.yaml  cargo-audit.yaml  cargo-lint.yaml  cargo-test.yaml  frontend.yaml
actix-api/: Cargo.toml
actix-api/src/: lib.rs  main.rs
actix-api/src/auth/: mod.rs
actix-api/src/db/: mod.rs
actix-api/tests/: common.rs  server.rs
dbmate/: Dockerfile
dbmate/db/migrations/: 20220807000000_create_oauth_requests.sql
docker/: .env-sample  Dockerfile.actix  Dockerfile.yew  docker-compose.yaml
types/: Cargo.toml
types/src/: lib.rs
yew-ui/: Cargo.toml  index.html
yew-ui/.cargo/: config.toml
yew-ui/src/: main.rs
yew-ui/src/components/: auth_info.rs  mod.rs
