[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = "4.1.0"
types = { path= "../types"}
serde = "1.0.140"
reqwest = "0.11.11"
env_logger = "0.9.0"
log = "0.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
