[package]
name = "yew-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
types = { path= "../types"}
const_format="0.2.25"
yew-oauth2 = "0.3"
lazy_static = "1.4.0"
gloo-console = "0.2.1"

[patch.crates-io]
yew-oauth2 = { git = 'https://github.com/security-union/yew-oauth2.git' }
